# fdump

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  go.mod  go.sum
docs/: draft01.dia
dscomm/dsalloc/: BENCH.txt  dsalloc.go  dsalloc_test.go
dscomm/dsdescr/: dsdescr.go
dscomm/dserr/: err.go
dscomm/dsinter/: dsinter.go
dscomm/dskvdb/: kvdb.go
dscomm/dslog/: dslog.go
dscomm/dspack/: hdescr.go  pack.go  pack_test.go  tailend.go  tdescr.go
dscomm/dsrpc/: .gitignore  client.go  compat.go  context.go  empty.go  error.go  exec_test.go  faddr.go  faddr_test.go  fconn.go  header.go  logger.go  midware.go  packet.go  request.go  response.go  server.go  tools.go  validate.go  xauth.go
fdagent/: Makefile.am  Makefile.in  configure  configure.ac
fdagent/fdaapi/: servapi.go  userapi.go
fdagent/fdacli/: fdacli.go
fdagent/fdasrv/: fdaserv.go
fdagent/fdasrv/fdacont/: contauth.go  contcomm.go  contserv.go  contuser.go
fdagent/fdasrv/fdagent/: storecomm.go  storeuser.go  storeuser_test.go
fdagent/fdasrv/fdareg/: regcomm.go  reguser.go  reguser_test.go
fdagent/rc/: Makefile.am  Makefile.in  fdagentd.service.in
fdagent/rc/init.d/: fdageant.in
fdagent/rc/rc.d/: fdagentd.in
fdmaster/: Makefile.am  Makefile.in  configure  configure.ac
fdmaster/fdmapi/: servapi.go  userapi.go
fdmaster/fdmcli/: BENCH.txt  fdmcli.go
fdmaster/fdmsrv/: fdmconf.go.in  fdmserv.go
fdmaster/fdmsrv/fdmaster/: storecomm.go  storeuser.go  storeuser_test.go
fdmaster/fdmsrv/fdmcont/: contauth.go  contcomm.go  contserv.go  contuser.go
fdmaster/fdmsrv/fdmreg/: regcomm.go  reguser.go  reguser_test.go
fdmaster/rc/: Makefile.am  Makefile.in  fdmasterd.service.in
fdmaster/rc/init.d/: fdageant.in
fdmaster/rc/rc.d/: fdmasterd.in
fdpacker/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  fdpacker.go
fdstore/: Makefile.am  Makefile.in  configure  configure.ac
fdstore/fdsapi/: servapi.go  userapi.go
fdstore/fdscli/: fdscli.go  fdscli_test.go
fdstore/fdssrv/: fdsserv.go
fdstore/fdssrv/fdscont/: contauth.go  contcomm.go  contserv.go  contuser.go
fdstore/fdssrv/fdsreg/: regcomm.go  reguser.go  reguser_test.go
fdstore/fdssrv/fdstore/: storecomm.go  storeuser.go  storeuser_test.go
fdstore/rc/: Makefile.am  Makefile.in  fdstored.service.in
fdstore/rc/init.d/: fdstored.in
fdstore/rc/rc.d/: fdstored.in
works/cron/: cron.go  cron_test.go
works/pack/: README.md  hdescr.go  header.go  pack.go  pack_test.go  packer.go  packer_test.go  packio.go  rwriter.go  tailend.go
works/tar/: tar.go  tar_test.go
